plugins {
	id 'org.springframework.boot' version '2.3.2.RELEASE'
	id 'io.spring.dependency-management' version '1.0.9.RELEASE'
	id 'java'
	id 'checkstyle'
	id 'org.flywaydb.flyway' version '6.4.2'
}

group = 'com.feed_grabber'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '11'

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'com.h2database:h2'//TODO: REMOVE AFTER CI SETUP
	implementation "io.jsonwebtoken:jjwt-api:0.10.5"
	implementation "io.jsonwebtoken:jjwt-impl:0.10.5"
	implementation "io.jsonwebtoken:jjwt-jackson:0.10.5"
	implementation 'org.mapstruct:mapstruct:1.3.1.Final'
    implementation 'org.springframework.boot:spring-boot-starter-websocket'
    compileOnly 'org.projectlombok:lombok'
	compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
	compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
	compile group: 'org.springframework.boot', name: 'spring-boot-starter-validation', version: '2.3.2.RELEASE'
	runtimeOnly 'org.postgresql:postgresql'
	implementation 'org.springframework.boot:spring-boot-starter-amqp'
	annotationProcessor 'org.projectlombok:lombok'
	annotationProcessor 'org.mapstruct:mapstruct-processor:1.3.1.Final'
	testImplementation('org.springframework.boot:spring-boot-starter-test') {
		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
	}
	testImplementation 'org.springframework.security:spring-security-test'
	testImplementation 'com.h2database:h2'
	testImplementation 'org.springframework.amqp:spring-rabbit-test'
	compile 'org.springframework.boot:spring-boot-starter-mail:2.3.2.RELEASE'
	compile 'org.springframework.boot:spring-boot-starter-thymeleaf:2.3.2.RELEASE'
}

test {
	useJUnitPlatform()
}

checkstyle {
	toolVersion = "8.29"
}

flyway {
	url = 'jdbc:postgresql://localhost:5432/feed_grabber'
	user = 'postgres'
	password = 'admin'
}
